--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>ru.gb</groupId>
     <artifactId>GitTest</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>Lesson_3</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
